# IS-project

./: CMakeLists.txt  README.md
mdpc/: CMakeLists.txt
mdpc/include/: BinMatrix.h  Matrix.hpp  channel.h  decoder.h  matrix_storage.hpp  mceliece.h  mceliece_min_sum.h  min_sum_decoder.hpp  qc_mdpc.h
mdpc/run/: decrypt.cpp  encrypt.cpp  information_security.ipynb  key_gen.cpp  run.sh  test.cpp
mdpc/src/: BinMatrix.cpp  channel.cpp  mceliece.cpp  mceliece_min_sum.cpp  min_sum_decoder.cpp  qc_mdpc.cpp
